--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ TOKEN_SIGN_SECRET=7690546475
 CLOUDINARY_NAME=swipeforchange
 CLOUDINARY_KEY=215887153795963
 CLOUDINARY_SECRET=fBJv1zVQ6yYo3id_PFi7NB0RW6o
-MONGODB_URI=mongodb://localhost:27017/swipedata
+MONGODB_URI=mongodb://localhost:27017/swipeforchange
 PORT=3030
 REACT_APP_URL=http://localhost:3000
+
